update html cal-Grade

--- a/pages/cal-Grade/index.html
+++ b/pages/cal-Grade/index.html
@@ -74,7 +74,56 @@
 
                     <!-- เริ่มทำงานตรงนี้ -->
 
-                    
+                    <div class="ui sixteen column grid">
+                        <div class="row">
+                            <div class="four wide column ">
+                                <div class="ui big input" style="width: 100%;">
+                                    <input type="text" id="yourname" placeholder="ชื่อ - สกุล">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="four wide column ">
+                                <div class="ui big input" style="width: 100%;">
+                                    <input type="number" id="score1" placeholder="วิชาที่ 1">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="four wide column ">
+                                <div class="ui big input" style="width: 100%;">
+                                    <input type="number" id="score2" placeholder="วิชาที่ 2">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="four wide column ">
+                                <div class="ui big input" style="width: 100%;">
+                                    <input type="number" id="score3" placeholder="วิชาที่ 3">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="four wide column ">
+                                <div class="ui big input" style="width: 100%;">
+                                    <input type="number" id="score4" placeholder="วิชาที่ 4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="four wide column ">
+                                <button class="ui primary button">
+                                    คำนวณ
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
